--- a/starter-code/views/index.hbs
+++ b/starter-code/views/index.hbs
@@ -1,2 +1,5 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+     <a class="return-button" href="./../routes/celebrities.js/">Go to celebrities</a>
+      
